@@ -1,9 +1,16 @@
 package database;
 
+import java.util.Locale;
+import entity.CopiaLibro;
+import entity.Libro;
 import entity.Prenotazione;
+import entity.UtenteRegistrato;
 
+import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.SQLIntegrityConstraintViolationException;
+import java.util.ArrayList;
+import java.util.List;
 
 public class PrenotazioneDAO {
 
@@ -11,26 +18,97 @@ public class PrenotazioneDAO {
         super();
     }
 
+    /**
+     * Salva una prenotazione nel database.
+     *
+     * @param prenotazione La prenotazione da salvare.
+     * @return Risultato della query.
+     * @throws SQLIntegrityConstraintViolationException Se si verifica una violazione di vincoli di integrità.
+     */
     public int salvaPrenotazione(Prenotazione prenotazione) throws SQLIntegrityConstraintViolationException {
 
         int result;
-        /*String query = "INSERT INTO prenotazione (DataConsegna, Costo, Copia, Utente) VALUES('%s', %d)".formatted(
-                prenotazione.getDataConsegna(),
-                prenotazione.getCostoPrestito()
-                prenotazione.getCopia(),
-                prenotazione.getUtente()
+        String query = String.format(Locale.US, // Specifica la locale US qui
+                "INSERT INTO prenotazioni (DataConsegna, Costo, Copia, Utente) VALUES('%s', %f, %d, '%s')",
+                prenotazione.getDataConsegna(), // Assicurati che questo sia già una stringa formattata correttamente per il DB (es. "yyyy-MM-dd HH:mm:ss")
+                prenotazione.getCostoPrestito(),
+                prenotazione.getCopiaLibro().getID(),
+                prenotazione.getUtenteRegistrato().getEmail()
         );
 
         try {
             result = DBConnectionManager.updateQuery(query);
-            System.out.println("[salvaCopiaLibro] Copia salvata con successo nel database");
+            System.out.println("[salvaPrenotazione] Prenotazione salvata con successo nel database");
         } catch (SQLIntegrityConstraintViolationException e) {
             throw e;
         } catch (ClassNotFoundException | SQLException e) {
-            System.err.println("[salvaCopiaLibro] Copia non salvata nel database: " + e.getMessage());
+            System.err.println("[salvaPrenotazione] Prenotazione non salvata nel database: " + e.getMessage());
             result = -1;
         }
-        */
-        return 0;
+
+        return result;
     }
+
+    /**
+     * Recupera tutte le prenotazioni dal database.
+     *
+     * @return Una lista di prenotazioni.
+     */
+    public List<Prenotazione> getAllPrenotazioni() {
+
+        List<Prenotazione> listaPrenotazioni = new ArrayList<>();
+
+        try {
+            String query = """
+            SELECT *
+            FROM prenotazioni p
+            JOIN copie c ON p.Copia = c.IDCopia
+            JOIN libri l ON c.Libro = l.ISBN
+            JOIN utenti u ON p.Utente = u.IDUtente
+            """;
+            ResultSet rs = DBConnectionManager.selectQuery(query);
+
+            while(rs.next()) {
+
+                Libro libro = new Libro(
+                    rs.getLong("ISBN"),
+                    rs.getString("Titolo"),
+                    rs.getString("Autore"),
+                    rs.getInt("AnnoPubblicazione"),
+                    rs.getString("Genere"),
+                    rs.getString("Descrizione"),
+                    rs.getInt("NumeroCopie")
+                );
+
+                CopiaLibro copia = new CopiaLibro(
+                    rs.getInt("IDCopia"),
+                    rs.getString("Stato"),
+                    libro
+                );
+                
+                UtenteRegistrato utente = UtenteRegistratoDAO.getUtenteRegistrato(
+                        rs,
+                        rs.getString("nome"),
+                        rs.getString("cognome"),
+                        rs.getString("email")
+                );
+
+                listaPrenotazioni.add(new Prenotazione(
+                    rs.getString("DataConsegna"),
+                    rs.getDouble("Costo"),
+                    copia,
+                    utente
+                ));
+            }
+
+            System.out.println("[getAllPrenotazioni] Prenotazioni del database recuperati");
+            rs.close();
+
+        } catch (SQLException | ClassNotFoundException e) {
+            System.err.println("[getAllPrenotazioni] Prenotazioni del database non recuperati: " + e.getMessage());
+        }
+
+        return listaPrenotazioni;
+    }
+
 }
